# ShotgunCSP

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: CSP_with_ShotgunCSP-GT.ipynb  CSP_with_element_substitution.ipynb
shotgun_csp/: __init__.py
shotgun_csp/descriptor/: __init__.py  base.py  cgcnn.py  compositions.py
shotgun_csp/generator/: __init__.py  template.py  toolbox.py  utils.py
shotgun_csp/io/: vasp.py
shotgun_csp/model/: __init__.py  cgcnn.py  sequential.py
shotgun_csp/model/nn/: __init__.py  layer.py  wrap.py
shotgun_csp/model/toolbox/: __init__.py
shotgun_csp/model/training/: __init__.py  base.py  checker.py  clip_grad.py  loss.py  lr_scheduler.py  optimizer.py  trainer.py  wrap.py
shotgun_csp/model/training/extension/: __init__.py  persist.py  validator.py
shotgun_csp/model/utils/: __init__.py  metrics.py
shotgun_csp/utils/: __init__.py  collection.py  parameter_gen.py  preset.py  product.py  useful_cls.py  useful_func.py  vasp.py
